--- a/style.css
+++ b/style.css
@@ -213,7 +213,7 @@ html {
 #tripPrices {
   font-size: 16px;
   font-family: "Brandon Text Regular";
-  text-align: left;
+  text-align: center;
   color: var(--dark-blue);
   display: flex;
   justify-content: space-around;
@@ -239,7 +239,7 @@ html {
   flex-flow: column nowrap;
   max-width: fit-content;
   margin: 0 20px;
-  border-radius: 5px;
+  border-radius: 10px;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
@@ -247,20 +247,23 @@ html {
 }
 
 #cardWrapper {
-  padding: 20px;
+  padding: 0 20px 20px 20px;
 }
 .wrapper {
   padding: 20px;
 }
 .tripTitle {
-  font-size: 18px;
+  font-family: "Proxima Nova Bold";
+  color: var(--dark-blue);
+  font-size: 24px;
   text-align: left;
   margin: 15px 0;
 }
 .tripText {
   padding-bottom: 20px;
   text-align: left;
-  font-family: "Proxima Nova Light";
+  font-size: 14px;
+  font-family: "Proxima Nova Regular";
 }
 
 #durationWrapper {
@@ -284,6 +287,7 @@ html {
 .durationImg {
   height: 15px;
   width: auto;
+  margin-right: 10px;
 }
 #summerWinter {
   text-align: left;
@@ -293,13 +297,17 @@ html {
 #summerWinter h3,
 #tripPrices p {
   font-size: 12px;
-  font-family: "Proxima Nova Regular";
+  font-family: "Proxima Nova Bold";
   color: #949494;
+  margin-bottom: 5px;
 }
-
+#tripPrices p span {
+  font-family: "Proxima Nova Regular";
+}
 #summerWinter p {
   margin: 0;
   font-size: 14px;
+  font-family: "Proxima Nova Regular";
 }
 
 #trips {
@@ -315,13 +323,14 @@ html {
 .tripImg {
   width: 300px;
   height: 200px;
-  border-radius: 20px;
+  border-radius: 10px;
   margin: 10px;
 }
 
 #imgWrapper p {
   position: absolute;
-  padding: 10px 30px;
+  padding: 7px 25px;
+  font-size: 12px;
   color: white;
   font-family: "Proxima Nova Bold";
 }
@@ -578,7 +587,7 @@ html {
 
 .tourTitle {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   align-items: center;
   max-width: 350px;
   box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.2);
@@ -589,9 +598,17 @@ html {
   font-family: var(--main-font);
   transition: transform 0.5s;
   margin: 30px auto;
-  padding: 8px 40px;
+  padding: 8px 60px 8px 40px;
   cursor: pointer;
   max-width: max-content;
+}
+.tourTitle:first-of-type::before {
+  content: "👤";
+  margin-right: 20px;
+}
+.tourTitle:last-of-type::before {
+  content: "👥";
+  margin-right: 20px;
 }
 .corona-guidelines {
   align-items: center;
@@ -691,68 +708,94 @@ html {
   color: var(--dark-blue);
   display: flex;
   flex-flow: column nowrap;
-  width: 500px;
+  width: 400px;
   margin: 0 40px;
-  padding: 50px;
+  padding: 40px 40px 60px 40px;
   border-radius: 15px;
   box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.2);
 }
 .weatherIcon {
-  width: 150px;
-  height: 120px;
-  float: right;
-  margin-left: auto;
+  width: 130px;
+  height: 100px;
+  position: absolute;
+  left: 40%;
 }
 #weatherResult {
   /* display: inline-table; */
   display: inline-flex;
-  margin: 0 40px;
+  margin: 0 -10px;
+  font-size: 14px;
+  font-style: italic;
   /* width: 300px; */
+  position: absolute;
+  margin-top: 14%;
+}
+#weatherResult p::before {
+  content: "\261E";
+  margin: 50px 10px;
+  font-size: 22px;
 }
 .temperature {
-  display: inline-flex;
-  margin-bottom: 30px;
+  /* display: inline-flex; */
+  margin-top: 0;
 }
 #weatherArea h1.location {
-  font-size: 30px;
+  font-size: 24px;
   font-family: "Proxima Nova Bold";
   margin: 0 0 10px 0;
 }
 #weatherArea .main {
-  font-size: 70px;
+  font-size: 60px;
   font-family: "Proxima Nova Bold";
-  margin: 20px 0;
+  margin: 20px 0 0 0;
 }
 #weatherArea .dateTime {
   color: #949494;
   font-weight: bold;
 }
-
+#weatherDetails .line {
+  border-right: 1px solid lightgray;
+  margin: 10px 0;
+}
+/* 
 .minMax {
   display: flex;
   align-content: center;
   place-content: center;
-}
+} */
 
 .minMax p,
 .wind img,
-.wind p {
+.wind p,
+.feelsLike img,
+.feelsLike p,
+.humid img,
+.humid p {
   padding: 16px 5px;
   margin: 0;
 }
+.status {
+  font-size: 14px;
+  font-family: "Proxima Nova Regular";
+  /* text-transform: uppercase; */
+  color: #949494;
+  margin: 0 20px 20px 0;
+  float: right;
+}
 #weatherDetails,
-.wind {
+.wind,
+.feelsLike,
+.humid {
   font-family: "Proxima Nova Bold";
   text-transform: uppercase;
-  font-size: 14px;
+  font-size: 12px;
   display: flex;
   color: var(--light-blue);
   align-items: center;
-  place-content: center;
   float: left;
 }
 #weatherDetails div {
-  margin-right: 40px;
+  margin-right: 20px;
 }
 .bottomSection {
   margin-top: auto;
@@ -767,6 +810,7 @@ html {
   display: inline-flex;
 }
 .dt {
+  font-size: 14px;
   margin: 0 0 0 10px;
 }
 
@@ -1297,9 +1341,8 @@ select:after {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
-  background:rgba(0,0,0,.0);
-  animation: fadeIn .5s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
-
+  background: rgba(0, 0, 0, 0);
+  animation: fadeIn 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
 .showModal {
@@ -1317,8 +1360,8 @@ select:after {
   text-align: justify;
   border-radius: 3px;
   box-shadow: 0 1px 25px 5px rgba(0, 0, 0, 0.4);
-  background-color:transparent;
-  animation: modalFadeIn .5s .8s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+  background-color: transparent;
+  animation: modalFadeIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 
 /* .modal-svg rect{
@@ -1326,25 +1369,26 @@ select:after {
 } */
 
 #trip-modal-content {
-  opacity:0;
-  animation: modalContentFadeIn .5s 1s cubic-bezier(0.165, 0.840, 0.440, 1.000) forwards;
+  opacity: 0;
+  animation: modalContentFadeIn 0.5s 1s cubic-bezier(0.165, 0.84, 0.44, 1)
+    forwards;
 }
 
 @keyframes fadeIn {
   0% {
-    background:rgba(0,0,0,.0);
+    background: rgba(0, 0, 0, 0);
   }
   100% {
-    background:rgba(0,0,0,.7);
+    background: rgba(0, 0, 0, 0.7);
   }
 }
 
 @keyframes modalFadeIn {
   0% {
-    background-color:transparent;
+    background-color: transparent;
   }
   100% {
-    background-color:white;
+    background-color: white;
   }
 }
 
@@ -1359,14 +1403,13 @@ select:after {
 
 @keyframes modalContentFadeIn {
   0% {
-    opacity:0;
-    top:-20px;
+    opacity: 0;
+    top: -20px;
   }
   100% {
-    opacity:1;
-    top:0;
-    background-color:white;
-
+    opacity: 1;
+    top: 0;
+    background-color: white;
   }
 }
 
@@ -1751,12 +1794,11 @@ select:after {
 /* @media (max-width: 768px) {
   /* .waves {
     /* height: 40px; */
-    /* min-height: 40px; */
-  /* } */
+/* min-height: 40px; */
+/* } */
 /* } */
 
 @media only screen and (max-width: 600px) {
-
 }
 
 /* on scroll reveal */
@@ -1776,12 +1818,8 @@ select:after {
   }
 }
 
-
 /* Ipad */
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : portrait) { 
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) {
   .availability {
     padding: 5px;
   }
@@ -1789,7 +1827,8 @@ and (orientation : portrait) {
     width: auto;
   }
 
-  .banner , .introTitle {
+  .banner,
+  .introTitle {
     left: auto;
     top: 20%;
   }
@@ -1798,24 +1837,17 @@ and (orientation : portrait) {
   }
 }
 
-@media only screen 
-and (min-device-width : 768px) 
-and (max-device-width : 1024px) 
-and (orientation : landscape) {
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
   .availability {
     padding: 5px;
   }
   .toPayment {
     width: auto;
   }
-
 }
 
 /* mobile */
-@media only screen 
-and (min-device-width : 375px) 
-and (max-device-width : 815px) {
-
+@media only screen and (min-device-width: 375px) and (max-device-width: 815px) {
   .tripImg {
     width: 90%;
     height: auto;
@@ -1841,7 +1873,7 @@ and (max-device-width : 815px) {
     flex-direction: column;
   }
 
-  #two-columns{
+  #two-columns {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1855,7 +1887,8 @@ and (max-device-width : 815px) {
   #singleTourArea {
     width: auto;
   }
-  .tourText, .coronaText {
+  .tourText,
+  .coronaText {
     max-width: 300px;
     width: auto;
   }
