card padding & margin

--- a/style.css
+++ b/style.css
@@ -217,17 +217,20 @@ html {
   color: var(--dark-blue);
   display: flex;
   justify-content: space-around;
-  margin-bottom: 20px;
 }
-
 #tripPrices p {
   display: flex;
   flex-direction: column;
-}
-
-#tripPrices p span {
-  font-size: 16px;
   color: var(--dark-blue);
+  font-size: 12px;
+  font-family: "Proxima Nova Bold";
+  margin: 20px 0;
+}
+#tripPrices p span {
+  font-family: "Proxima Nova Regular";
+  font-size: 16px;
+  color: #000;
+  line-height: 30px;
 }
 
 #tripPrices .line {
@@ -240,14 +243,15 @@ html {
   max-width: fit-content;
   margin: 0 20px;
   border-radius: 10px;
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+  /* box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    0 100px 80px rgba(0, 0, 0, 0.07);
+    0 100px 80px rgba(0, 0, 0, 0.07); */
+  box-shadow: 0 1px 25px 1px rgba(0, 0, 0, 0.2);
 }
 
 #cardWrapper {
-  padding: 0 20px 20px 20px;
+  margin: 0 30px;
 }
 .wrapper {
   padding: 20px;
@@ -294,15 +298,11 @@ html {
   padding-bottom: 30px;
 }
 
-#summerWinter h3,
-#tripPrices p {
+#summerWinter h3 {
   font-size: 12px;
   font-family: "Proxima Nova Bold";
   color: #949494;
   margin-bottom: 5px;
-}
-#tripPrices p span {
-  font-family: "Proxima Nova Regular";
 }
 #summerWinter p {
   margin: 0;
@@ -324,7 +324,7 @@ html {
   width: 300px;
   height: 200px;
   border-radius: 10px;
-  margin: 10px;
+  margin: 15px;
 }
 
 #imgWrapper p {
@@ -344,7 +344,7 @@ html {
   margin-top: 170px;
 } */
 .readMoreTrip {
-  /* margin-left: auto; */
+  display: flex;
   text-align: left;
   margin-top: auto;
   font-size: 14px;
@@ -352,14 +352,18 @@ html {
   color: white;
   background-color: var(--dark-blue);
   /* border: solid 1px var(--dark-blue); */
-  border-radius: 0 0 5px 5px;
-  cursor: pointer;
+  border-radius: 0 0 10px 10px;
   padding: 20px;
   font-family: var(--main-font);
-  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
+  /* box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.02),
     0 6.7px 5.3px rgba(0, 0, 0, 0.028), 0 12.5px 10px rgba(0, 0, 0, 0.035),
     0 22.3px 17.9px rgba(0, 0, 0, 0.042), 0 41.8px 33.4px rgba(0, 0, 0, 0.05),
-    0 100px 80px rgba(0, 0, 0, 0.07);
+    0 100px 80px rgba(0, 0, 0, 0.07); */
+}
+.readMoreTrip img {
+  margin-left: auto;
+  width: 20px;
+  margin-right: 10px;
 }
 
 #timelineArea {
@@ -457,7 +461,7 @@ html {
   transition: 0.5s;
 }
 .readMoreTrip span:after {
-  content: "\00bb";
+  /* content: "\00bb"; */
   position: absolute;
   opacity: 0;
   top: 0;
@@ -655,9 +659,7 @@ html {
   width: 400px;
   text-align: left;
   display: none;
-  text-indent: 50px;
 }
-
 .tourImg {
   width: 350px;
   border-radius: 5px 5px 0 0;
@@ -671,34 +673,34 @@ html {
 
 @keyframes slide {
   0% {
-      opacity: 0;
-      transform: translateY(50%);
+    opacity: 0;
+    transform: translateY(50%);
   } 
   100% {
-      opacity: 1;
-      transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);
   } 
 } */
 
 /* -------- covid & weather container ------- */
 #two-columns {
-  display: flex;
+  flex-direction: column;
   justify-self: center;
+  display: flex;
+  align-items: center;
   justify-content: center;
   margin-bottom: 50px;
 }
 
 /* -------- covid ------- */
 #corona {
-  grid-area: covid;
+  grid-area: covid / covid / covid / covid;
   display: flex;
-  justify-self: center;
+  /* place-self: start center; */
   align-items: center;
   place-content: center;
   flex-flow: column;
-  margin: 0 40px;
-  align-self: start;
-  /* margin-left: 100px; */
+  margin: 40px;
 }
 
 /* -------- weather ------- */
@@ -720,7 +722,7 @@ html {
   width: 130px;
   height: 100px;
   position: absolute;
-  left: 40%;
+  left: 55%;
 }
 #weatherResult {
   /* display: inline-table; */
@@ -1421,13 +1423,19 @@ select:after {
 #payment-modal-content {
   width: 50%;
 }
-.fullDescription,
-.coronaText {
+.fullDescription {
   font-family: "Proxima Nova Regular";
   margin-top: 20px;
   margin: 30px;
   text-align: left;
   line-height: 1.8;
+}
+.coronaText {
+  font-family: "Proxima Nova Regular";
+  margin-top: 20px;
+  margin: 30px;
+  line-height: 1.8;
+  text-align: justify;
 }
 .trip-modal-close,
 .payment-modal-close {
