--- a/style.css
+++ b/style.css
@@ -59,20 +59,14 @@
 body {
   font-family: var(--main-font);
   margin: 0;
-  width: fit-content;
 }
+
 html {
   scroll-behavior: smooth;
 }
 
 /* --------- TOP NAV -------- */
-/* #topNavigation, */
-#bottomNavigation {
-  background-color: var(--light-beige);
-  color: var(--dark-blue);
-  /* margin: 10px; */
-  /* box-shadow: 0 2px 10px rgba(226, 225, 225, 0.2); */
-}
+
 #topNavigation {
   position: fixed;
   width: 100%;
@@ -398,9 +392,9 @@ html {
   left: 50%;
 }
 #lineSvg {
-  height: 1220px;
-  stroke-dasharray: 1000;
-  stroke-dashoffset: 1000;
+  height: 1300px;
+  /* stroke-dasharray: 1000; */
+  /* stroke-dashoffset: 1000; */
   animation: dash 5s linear alternate infinite;
 }
 @keyframes dash {
@@ -674,6 +668,7 @@ html {
 #two-columns {
   display: flex;
   justify-content: center;
+  flex-direction: column;
   margin: 50px;
 }
 
@@ -786,6 +781,9 @@ html {
   color: var(--light-blue);
   flex: auto;
 }
+#weatherDetails p {
+  margin-left: 5px;
+}
 
 #weatherDetails div {
   display: flex;
@@ -814,109 +812,68 @@ html {
 
 /* --------- BOTTOM NAV -------- */
 #bottomNavigation {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: repeat(2, 1fr);
-  grid-template-areas:
-    "t1 t2 t3 t4"
-    "desc1 desc2 desc3 desc4"
-    ". feature1 feature2 .";
+  background-color: var(--light-beige);
+  color: var(--dark-blue);
+}
+
+#footerPrimary {
+  display: flex;
   padding: 30px;
 }
-#bottomNavigation h5:first-of-type {
-  grid-area: t1;
+
+#footerPrimary div {
+  margin-right: 70px;
 }
-#bottomNavigation h5:nth-of-type(2n) {
-  grid-area: t2;
+
+#footerSecondary {
+  padding: 0 30px 30px 30px;
 }
-#bottomNavigation h5:nth-of-type(3n) {
-  grid-area: t3;
-}
-#bottomNavigation h5:last-of-type {
-  grid-area: t4;
-  margin-left: 180px;
-}
-#bottomNavigation p:first-of-type {
-  grid-area: desc1;
-  margin: 0 70px 0 0;
-}
-#bottomNavigation p:nth-of-type(2n) {
-  grid-area: desc2;
-  margin: 0 70px 0 0;
-}
-#bottomNavigation p:nth-of-type(3n) {
-  grid-area: desc3;
-  margin: 0;
-}
-#bottomNavigation a:nth-of-type(1n) {
-  grid-area: desc3;
-  margin-top: 20px;
-}
-#bottomNavigation a:nth-of-type(2n),
-#bottomNavigation a:nth-of-type(3n),
-#bottomNavigation a:nth-of-type(4n) {
-  grid-area: desc4;
-  margin-top: 0;
-}
+
 #bottomNavigation p {
   font-size: 14px;
 }
+
 #bottomNavigation h5 {
-  text-transform: uppercase;
   font-size: 12px;
 }
 
 .socialMediaIcon {
   width: 30px;
-  height: auto;
-  grid-area: desc4;
-  margin-left: 170px;
   cursor: pointer;
 }
+
 .contactLink1 {
   cursor: pointer !important;
 }
-.contactIcon2 {
-  grid-area: desc4;
-  padding-left: 50px;
-}
-.contactIcon3 {
-  grid-area: desc4;
-  padding-left: 100px;
-}
 
-.featuredIn {
-  width: 120px;
-  height: auto;
-  margin-top: 30px;
-}
 .times {
-  grid-area: feature1;
-  width: 150px;
-  display: flex;
-  justify-self: right;
-  align-self: flex-end;
-  margin-right: 90px;
+  margin-right: 30px;
+  width: 120px;
 }
 .conde {
-  grid-area: feature2;
+  width: 100px;
 }
 
 /* --------- FAQ ---------- */
 #faq {
-  padding: 50px 300px;
+  margin: 0 25%;
 }
 #faqInfo {
-  padding: 200px 0 80px 0;
+  padding:  10% 25%;
+  background-image: url("http://pbstyle.dk/wpinstall/wordpress/wp-content/uploads/2020/12/sea.jpg");
+  background-size: cover;
+  background-attachment: fixed;
+  color: white;
 }
+
 .faqTitle {
   padding-top: 0;
   text-transform: uppercase;
 }
 .faqDescription {
   font-family: "Brandon Text Light";
-  padding: 30px 300px 20px 300px;
 }
+
 #compass {
   margin: 20px 0 60px 0;
 }
@@ -946,7 +903,9 @@ html {
 /* NEWSLETTER OVERLAY */
 #news {
   display: flex;
-  align-self: flex-start;
+  display: flex;
+  align-items: center;
+  align-self: center;
 }
 
 .newsletterSubscription {
@@ -1638,7 +1597,7 @@ select:after {
 /* waves */
 /* https://codepen.io/goodkatz/pen/LYPGxQz */
 /* Animation */
-/* 
+/*
 .waves {
   display: none;
   width: 100%;
@@ -1687,7 +1646,7 @@ select:after {
 /* min-height: 40px; */
 /* } */
 /* } */
-/* 
+/*
 @media only screen and (max-width: 600px) {
 } */
 
@@ -1737,15 +1696,57 @@ select:after {
 }
 
 /* mobile */
-@media only screen and (min-device-width: 375px) and (max-device-width: 815px) {
+@media only screen and (min-device-width: 300px) and (max-device-width: 815px) {
+  .banner, .introTitle {
+    display: none;
+  }
+
+  #videoWrapper {
+    display: none;
+  }
+
+  /* form */
+  #formBox {
+    position: relative;
+    background-image: url("http://pbstyle.dk/wpinstall/wordpress/wp-content/uploads/2020/12/sea.jpg");
+    background-attachment: fixed;
+    padding: 150px 0;
+  }
+
+  #oneCell {
+    width: auto !important;
+  }
+
+  #firstRow,
+  #secondRow {
+    flex-direction: column;
+  }
+
+  #secondRow .formLabel {
+  margin: inherit;
+  }
+
+  #secondRow .formLabel:last-of-type {
+    border-left: none;
+  }
+  #secondRow .formLabel:last-of-type {
+  padding-left: 0;
+  }
+
+  .toPayment {
+    width: 100%;
+  }
+
+  /* trips */
+  #tours, #trips {
+    margin: 0 5%;
+  }
+
   .tripImg {
     width: 90%;
     height: auto;
   }
 
-  #tripArea {
-    max-width: 600px;
-  }
   #tripArea {
     display: flex;
     flex-direction: column;
@@ -1753,34 +1754,74 @@ select:after {
   }
 
   #singleTripArea {
-    margin: 50px;
+    margin: 40px 0;
   }
-  .availability {
-    display: flex;
+
+  #customiseYourOwn {
+    text-align-last: center;
   }
-  #firstRow,
-  #secondRow {
-    flex-direction: column;
+
+  /* tour */
+  #tourArea {
+    flex-wrap: nowrap;
   }
 
   #singleTourArea {
     width: auto;
   }
+
   .tourText,
   .coronaText {
-    max-width: 300px;
     width: auto;
   }
-  #formBox {
-    position: relative;
+  .coronaText {
+    margin: 30px 0;
+    text-align: left;
   }
-  #oneCell {
-    width: auto !important;
+
+  #customiseYourOwn h3 {
+    margin-top: 0;
+    margin-bottom: 50px;
   }
+
+  #corona {
+    margin-bottom: 50px;
+  }
+
   #boatSvg {
     display: none;
   }
+
+  #weatherArea {
+    margin: 0 5%;
+  }
+
+  /* faq */
   #faq {
-    padding: 20px;
+    margin: 20px;
+  }
+
+  #faqInfo {
+    height: 450px;
+    padding: 30% 5% 0 5%;
+  }
+
+  /* news */
+  #news {
+    margin: 0 5%;
+  }
+
+  /* modals */
+  #trip-modal-content, #payment-modal-content {
+    width: auto;
+    margin: 15% auto;
+  }
+  /* footer */
+  #bottomNavigation {
+    display: block;
+  }
+
+  #footerPrimary {
+    flex-direction: column;
   }
 }
